Changelog
=========

1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2013-03-05)
----------------

- Support for Python 3.3

- Added test for PEP 386 compliance.


0.9.3 (2011-03-17)
------------------

- It's now using a ProxyStub for the PyPI xmlrpclib during tests.

- Removed the Dependency rating.

- Added a rating that runs tests, to see if they run. This will also take
  care of checking for dependencies.


0.9.2 (2011-03-13)
------------------

- Commented out the dependency test, it was too unreliable.

- Fixed the ReST.

- Python 3 support.


0.9.1 (2011-03-08)
------------------

- Initial release